Remove additional CORS allowed origin

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ DB_NAME=agendapro
 TOKEN_SECRET=change-me
 TOKEN_EXPIRATION=3600
 
-CORS_ALLOWED_ORIGINS="http://localhost:5173, http://192.168.1.4:5173"
+CORS_ALLOWED_ORIGINS="http://localhost:5173"
 CORS_ALLOW_CREDENTIALS=true
 CORS_ALLOWED_HEADERS="X-Requested-With, Content-Type, Accept, Origin, Authorization"
 CORS_ALLOWED_METHODS="GET, POST, PUT, PATCH, DELETE, OPTIONS"
