--- a/.env.example
+++ b/.env.example
@@ -15,10 +15,34 @@ DB_NAME=agendapro
 TOKEN_SECRET=change-me
 TOKEN_EXPIRATION=3600
 
-CORS_ALLOWED_ORIGINS="http://localhost:5173"
+CORS_ALLOWED_ORIGINS="http://localhost:5173, http://127.0.0.1:5173"
 CORS_ALLOW_CREDENTIALS=true
 CORS_ALLOWED_HEADERS="X-Requested-With, Content-Type, Accept, Origin, Authorization"
 CORS_ALLOWED_METHODS="GET, POST, PUT, PATCH, DELETE, OPTIONS"
+
+SESSION_COOKIE_NAME=agenda_session
+SESSION_COOKIE_SECURE=false
+SESSION_COOKIE_HTTP_ONLY=true
+SESSION_COOKIE_SAME_SITE=Lax
+SESSION_COOKIE_PATH=/
+SESSION_COOKIE_DOMAIN=
+SESSION_COOKIE_LIFETIME=0
+AUTH_ALLOW_BEARER_FALLBACK=false
+
+WHATSAPP_ENABLED=false
+WHATSAPP_PROVIDER=infobip
+WHATSAPP_INFOBIP_BASE_URL=
+WHATSAPP_INFOBIP_API_KEY=
+WHATSAPP_INFOBIP_SENDER=
+WHATSAPP_INFOBIP_CALLBACK_DATA=
+WHATSAPP_UNOFFICIAL_ENDPOINT=
+WHATSAPP_UNOFFICIAL_TOKEN=
+WHATSAPP_UNOFFICIAL_TOKEN_HEADER=Authorization
+WHATSAPP_UNOFFICIAL_TOKEN_PREFIX=Bearer
+WHATSAPP_UNOFFICIAL_PHONE_FIELD=number
+WHATSAPP_UNOFFICIAL_MESSAGE_FIELD=text
+WHATSAPP_UNOFFICIAL_EXTRA_PAYLOAD_JSON=
+WHATSAPP_DEFAULT_COUNTRY_CODE=55
 
 MAIL_FROM=contato@exemplo.com
 MAIL_SMTP_HOST=smtp.exemplo.com
