--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,9 @@ WHATSAPP_INFOBIP_BASE_URL=
 WHATSAPP_INFOBIP_API_KEY=
 WHATSAPP_INFOBIP_SENDER=
 WHATSAPP_INFOBIP_CALLBACK_DATA=
+WHATSAPP_META_API_BASE_URL=https://graph.facebook.com/v20.0
+WHATSAPP_META_PHONE_NUMBER_ID=
+WHATSAPP_META_ACCESS_TOKEN=
 WHATSAPP_UNOFFICIAL_ENDPOINT=
 WHATSAPP_UNOFFICIAL_TOKEN=
 WHATSAPP_UNOFFICIAL_TOKEN_HEADER=Authorization
