--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,7 @@ WHATSAPP_UNOFFICIAL_TOKEN_PREFIX=Bearer
 WHATSAPP_UNOFFICIAL_PHONE_FIELD=number
 WHATSAPP_UNOFFICIAL_MESSAGE_FIELD=text
 WHATSAPP_UNOFFICIAL_EXTRA_PAYLOAD_JSON=
+WHATSAPP_TIMEOUT_SECONDS=10
 WHATSAPP_DEFAULT_COUNTRY_CODE=55
 
 MAIL_FROM=contato@exemplo.com
